--- a/Remotion/Core/Reflection/Core.Reflection.csproj
+++ b/Remotion/Core/Reflection/Core.Reflection.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\Core\Core.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommonServiceLocator" Version="2.0.6" />
+    <PackageReference Include="CommonServiceLocator" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
