--- a/Remotion/Web/Development.WebTesting.IntegrationTests/App.config
+++ b/Remotion/Web/Development.WebTesting.IntegrationTests/App.config
@@ -36,7 +36,7 @@
         <add path="..\..\Web\ClientScript\bin" />
       </resources>
     </testSiteLayout>
-    <chrome disableSecurityWarningsBehavior="Ignore" />
+    <chrome disableSecurityWarningsBehavior="Automatic" />
     <edge disableSecurityWarningsBehavior="Ignore" />
   </remotion.webTesting>
   <log4net>
